[package]
name = "retoco"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.0.0"
edition = "2021"

[dependencies]
regex = "1.10.6"
retoco-proc-macro = { path = "retoco-proc-macro" }
retoco-token-stream = { path = "retoco-token-stream" }

[workspace]
members = ["retoco-proc-macro", "retoco-token-stream"]
