[package]
name = "retoco"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace]
members = ["retoco-proc-macro", "retoco-test-proc-macro", "retoco-token-stream"]

[dependencies]
regex = "1.10"
retoco-proc-macro = { path = "retoco-proc-macro" }
retoco-token-stream = { path = "retoco-token-stream" }

[dev-dependencies]
retoco-test-proc-macro = { path = "retoco-test-proc-macro" }
